[package]
name = "aoc_rust_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
pathfinding = "4.6.0"
smallvec = { version = "1.11.2", features = ["const_generics"] }
thiserror = "1.0.50"
